# ida-wii-loaders

./: .gitignore  CMakeLists.txt  README.md
dol/: CMakeLists.txt  dol.cpp
loader/: idaloader.h
rel/: CMakeLists.txt  rel.cpp  rel_track.cpp  rel_track.h
